--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,13 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+
+    supportVersion = '28.0.0'
+    playServices = '11.8.0'
+    retrofitVersion = '2.3.0'
+    rxJavaVersion = '1.3.0'
+    rxAndroidVersion = '1.2.1'
+    loggingRetrofitVersion = '3.5.0'
+}
