--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,5 @@ ext {
     rxJavaVersion = '1.3.0'
     rxAndroidVersion = '1.2.1'
     loggingRetrofitVersion = '3.5.0'
+    knifeButter = '8.8.1'
 }
