Feature character details

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,5 @@ org.gradle.jvmargs=-Xmx1536m
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
+marvelPublicKey=ad485bef31da7e3c24ce80aba0bddd77
+marvelPrivateKey=ebaca02cb4599facbfaa023f371eaec3dbb855a3
