--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".view.characterDetails.CharacterDetailsActivity"
-                  android:parentActivityName=".view.home.HomeActivity"/>
+        <activity android:name=".view.characterDetails.CharacterDetailsActivity" />
 
     </application>
 
