--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="br.com.douglasqueiroz.mavelapp">
+          xmlns:tools="http://schemas.android.com/tools" package="br.com.douglasqueiroz.mavelapp">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -10,7 +10,10 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:fullBackupContent="true"
+            tools:ignore="GoogleAppIndexingWarning">
+
         <activity android:name=".view.home.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
